# churn-prediction-end-to-end

./: .gitignore  Dockerfile  README.md  makefile  mlflow.db  pyproject.toml
churn_prediction_end_to_end.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/raw/: telco_churn.csv
docs/: deployment_monitoring.md  ml_canvas.md  model_card.md
mlruns/1/models/m-074184267aa34b36bd9afe9154e2d5be/artifacts/: MLmodel  conda.yaml  input_example.json  requirements.txt  serving_input_example.json
mlruns/1/models/m-074184267aa34b36bd9afe9154e2d5be/artifacts/data/: model.pth
mlruns/1/models/m-23aa5c38a3da48af9c399d78b22631b0/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  requirements.txt  serving_input_example.json
mlruns/1/models/m-3af62adbe0a644c4899c4330d7d3a956/artifacts/: MLmodel  model.pkl
models/: churn_mlp.pth  preprocessor.pkl
notebooks/: 01_exploratory_data_analysis.ipynb
src/: api.py  train_baseline.py  train_nn.py
tests/: test_api.py  test_schema.py
