[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction-end-to-end"
version = "0.1.0"
description = "End-to-End Neural Network Pipeline for Churn Prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Allanderson Barros", email = "allanderson.barros@gmail.com" }
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0", 
    
    "torch>=2.0.0", 
    
    "mlflow>=2.3.0", 
    
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0", 
    "pydantic>=2.0.0",  
    "pandera>=0.16.0"  
]

[project.optional-dependencies]

dev = [
    "pytest>=7.0.0", 
    "ruff>=0.1.0", 
    "jupyter>=1.0.0", 
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  
    "F",  
    "I",  
    "W",  
]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
